ecmascript/parser/tests/test262-error-references/fail/1bde73ba53c309c8.js.stderr
error: Expected ], got iter
 --> $DIR/tests/test262-parser/fail/1bde73ba53c309c8.js:1:12
  |
1 | ({ *[yield iter]() {} })
  |            ^^^^

